tests/errors/named_dup.vt
fn f(a: int, b: int) {} fn main(){ f(1, a: 2); }
